added support for hostname validation in zk3

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -624,6 +624,7 @@ _UI_StringRole_COUNTRY_literal = COUNTRY
 _UI_StringRole_CREDIT_CARD_literal = CREDIT_CARD
 _UI_StringRole_CURRENCY_literal = CURRENCY
 _UI_StringRole_DATE_INTERVAL_literal = DATE_INTERVAL
+_UI_StringRole_HOSTNAME_literal = HOSTNAME
 _UI_StringRole_IBAN_literal = IBAN
 _UI_StringRole_ICON_literal = ICON
 _UI_StringRole_LANGUAGE_literal = LANGUAGE
