support automatic data deletion

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -240,6 +240,8 @@ _UI_Entity_hasTray_feature = Hat Ablage
 _UI_Entity_hasTray_description = Ob der Workflow einen Zustand Ausgesetzt beinhalten soll.
 _UI_Entity_ownerPermission_feature = Eigner Zugriffsrecht
 _UI_Entity_ownerPermission_description = Ob Benutzer ihre eigenen Daten verwalten und ändern können sollen.
+_UI_Entity_deleteExpired_feature = Lösche abgelaufene
+_UI_Entity_deleteExpired_description = Ob veraltete Daten automatisch gelöscht werden sollen.
 _UI_Entity_skipHookSubscribers_feature = Hook-Subscriber überspringen
 _UI_Entity_skipHookSubscribers_description = Ob diese Entität Hook-Subscriber unterstützt.
 _UI_Entity_formAwareHookProvider_feature = Form Aware Hook Provider
