--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -93,6 +93,7 @@ MostDslValidator.EntityIndexNeedsName=Jeder Index muss einen Namen haben.
 MostDslValidator.EntityIpTraceableNeedsChangeTriggerReference=Das IpTraceable Change Trigger Feld muss den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
 MostDslValidator.EntityIpTraceableNeedsValidChangeTriggerReference=Das IpTraceable Change Trigger Feld muss workflowState, den Namen eines Feldes oder einer eingehenden Beziehung (property.field) referenzieren.
 MostDslValidator.EntityLoggableNeedsVersionField=Entitäten mit Loggable benötigen ein Integer-Feld mit dem aktivierten Attribut version.
+MostDslValidator.EntityMustNotHaveBothArchiveAndDeletion=Eine Entität kann nicht Archivierung und Löschung gleichzeitig nutzen.
 MostDslValidator.EntityMustNotHaveMultipleDeleteActions=Es darf nicht mehr als eine Delete-Aktion in einer Entität geben.
 MostDslValidator.EntityMustNotHaveMultipleDisplayActions=Es darf nicht mehr als eine Display-Aktion in einer Entität geben.
 MostDslValidator.EntityMustNotHaveMultipleEditActions=Es darf nicht mehr als eine Edit-Aktion in einer Entität geben.
@@ -131,6 +132,7 @@ MostDslValidator.EntityTreeMustNotContainReservedField=Daher dürfen Deine Felder
 MostDslValidator.EntityTreeMustNotContainReservedSource=Daher darf Deine Referenz diese Quell-Aliase nicht enthalten.
 MostDslValidator.EntityTreeMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
 MostDslValidator.EntityWithArchiveRequiresEndDate=Entitäten mit einem Archiv müssen ein Zeitstempel- oder Datumsfeld enthalten, welches als Enddatum ausgezeichnet ist.
+MostDslValidator.EntityWithDeletionRequiresEndDate=Entitäten mit automatischer Löschung müssen ein Zeitstempel- oder Datumsfeld enthalten, welches als Enddatum ausgezeichnet ist.
 MostDslValidator.EntityWithEnhancedWorkflowNeedsStandardFields=Entitäten mit erweiterten Workflows benötigen Standardfelder zur Identifikationd es Erstellers.
 MostDslValidator.FieldAggregateNeedsLocking=Entitäten mit einem Aggregat-Feld sollten eine Locking-Strategie nutzen (optimistisches oder pessimistisches Lesen).
 MostDslValidator.FieldAggregateNeedsValidRelation=Aggregat-Felder funktionieren nur in Kombination mit einer ausgehenden und bidirektionalen Eins-zu-Viele-Beziehung mit persist-Kaskade.
