--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -235,6 +235,7 @@ MostDslQuickfixProvider.UnsetsAllFlagsExceptRole=Alle Flags außer der semantisch
 MostDslQuickfixProvider.UnsetsAllPrimaryKeyFlagsExceptTheFirstOne=Alle primary key-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider.UnsetTheAggregateFlag=Das aggregate-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheArchiveFlag=Das Archiv-Flag zurücksetzen
+MostDslQuickfixProvider.UnsetTheDeletionFlag=Das Löschen-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheEndDateFlag=Das Enddatum-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheFutureFlag=Das future-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheMandatoryFlag=Das mandatory-Flag zurücksetzen
