🌐 update obsolete translation messages

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -109,7 +109,7 @@ _UI_Application_generateModerationBlock_description = Ob ein Moderationsblock ge
 _UI_Application_generateListContentType_feature = Listen Content Type generieren
 _UI_Application_generateListContentType_description = Ob ein Content Type für Listenansichten generiert werden soll oder nicht.
 _UI_Application_generateDetailContentType_feature = Detail Content Type generieren
-_UI_Application_generateDetailContentType_description = Ob ein Content Type für einzelne Objekte generiert werden soll oder nicht. Benötigt einen User Controller mit einer Display-Aktion.
+_UI_Application_generateDetailContentType_description = Ob ein Content Type für einzelne Objekte generiert werden soll oder nicht. Benötigt mindestens eine Entität mit einer Display-Aktion.
 _UI_Application_generateNewsletterPlugin_feature = Newsletter Plugin generieren
 _UI_Application_generateNewsletterPlugin_description = Ob ein Newsletter Plugin generiert werden soll oder nicht.
 _UI_Application_generateModerationPanel_feature = Moderationspanel generieren
@@ -121,7 +121,7 @@ _UI_Application_generateExternalControllerAndFinder_description = Ob ein Control
 _UI_Application_generateScribitePlugins_feature = Scribite Plugins generieren
 _UI_Application_generateScribitePlugins_description = Ob Unterstützung für mehrere Scribite-Editoren generiert werden soll oder nicht. Benötigt externen Controller mit Finder-Komponente.
 _UI_Application_generateTagSupport_feature = Tag Support generieren
-_UI_Application_generateTagSupport_description = Ob der Tag Support generiert werden soll oder nicht. Benötigt User oder Admin Controller mit einer Display-Aktion.
+_UI_Application_generateTagSupport_description = Ob der Tag Support generiert werden soll oder nicht. Benötigt mindestens eine Entität mit einer Display-Aktion.
 _UI_Application_generateMultiHookNeedles_feature = MultiHook-Needles generieren
 _UI_Application_generateMultiHookNeedles_description = Ob MultiHook-Needles generiert werden sollen oder nicht.
 _UI_Application_generateRssTemplates_feature = RSS-Templates generieren
