overhaul logic for resolving index items for foreign keys

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -82,7 +82,7 @@ MostDslValidator.EntityHierarchyMustHaveSameDiscriminatorColumn=Alle Vererbungsb
 MostDslValidator.EntityHierarchyMustHaveSameInheritanceStrategy=Alle Vererbungsbeziehungen innerhalb einer Klassenhierarchie müssen die gleiche Vererbungsstrategie haben.
 MostDslValidator.EntityHierarchyMustHaveSameTrackingPolicy=Alle Entitäten innerhalb einer Klassenhierarchie müssen die gleiche Change Tracking Policy haben.
 MostDslValidator.EntityIndexItemNameMustBeUnique=Die Namen der Index-Einträge müssen eindeutig pro Index sein.
-MostDslValidator.EntityIndexItemNameMustReferenceEntityField=Jeder Index-Eintrag muss den gleichen Namen haben wie das referenzierte Feld der Entität oder Quell-/Ziel-Alias einer Relation.
+MostDslValidator.EntityIndexItemNameMustReferenceEntityField=Jeder Index-Eintrag muss den gleichen Namen haben wie das referenzierte Feld der Entität oder das Quell-Alias einer eingehenden bidirektionalen Eins-zu-Viele-Beziehung.
 MostDslValidator.EntityIndexLengthMustNotBeTooLarge=Die Länge aller Index-Felder darf nicht höher sein als 191.
 MostDslValidator.EntityIndexNameMustBeLonger=Der Name des Index muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.EntityIndexNameMustBeUnique=Die Namen der Indexe müssen eindeutig pro Entität sein.
